--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .hoverEffect {
+        @apply h-[52px] w-[52px] cursor-pointer rounded-full hover:bg-gray-200 lg:h-auto lg:w-auto lg:p-3;
+    }
+}
